# rust-clean-arch-v1

./: Cargo.toml
src/: Settings.toml  cockroach.rs  database.rs  lib.rs  main.rs  settings.rs
src/cockroach/: entities.rs  handlers.rs  messaging.rs  mod.rs  models.rs  repositories.rs  usecases.rs
src/cockroach/entities/: cockroach.rs  cockroach_entities.rs
src/cockroach/handlers/: axum_handler.rs  handlers.rs  mod.rs
src/cockroach/messaging/: fcm_messaging.rs  messaging.rs  mod.rs
src/cockroach/model/: insert_cockroach_data.rs  select_cockroach_data.rs
src/cockroach/models/: cockroach.rs
src/cockroach/repositories/: mod.rs  postgres_repository.rs  repositories.rs
src/cockroach/usecases/: mod.rs  usecase_impl.rs  usecases.rs
src/database/: database.rs  mod.rs  postgres_database.rs
src/settings/: axum_setting.rs  mod.rs  postgres_setting.rs  settings.rs
